feat: add regenerate response option [#1241]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -379,6 +379,7 @@ $theme-red-230408: #230408;
   --border-secondary-200 : #{$theme-grey-8A9299};
   --border-secondary-290 : #{$theme-grey-484848};
   --border-secondary-300 : #{$theme-grey-45494D};
+  --border-secondary-320 : #{$theme-grey-353646};
   --border-secondary-400 : #{$theme-grey-313233};
   --border-secondary-450 : #{$theme-grey-191919};
   --border-secondary-500 : #{$theme-grey-272727};
