--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -94,6 +94,7 @@ $theme-grey-ffffff: #FFFFFF;
 $theme-grey-F5F5F5: #F5F5F5;
 $theme-grey-e5e5e5: #e5e5e5;
 $theme-grey-C4CBDA: #C4CBDA;
+$theme-grey-B6B5B5: #B6B5B5;
 $theme-grey-8A9299: #8A9299;
 $theme-grey-999999: #999999;
 $theme-grey-CCCCCC :#CCCCCC;
@@ -571,6 +572,7 @@ $sparrow-text-colors: (
   secondary-110 : $theme-grey-F5F5F5,
   secondary-150 : $theme-grey-e5e5e5,
   secondary-170 : $theme-grey-C4CBDA,
+  secondary-180 : $theme-grey-B6B5B5,
   secondary-200 : $theme-grey-8A9299,
   secondary-250 : $theme-grey-636566,
   secondary-270 : $theme-grey-60616B,
@@ -619,6 +621,7 @@ $sparrow-bg-colors: (
   secondary-110 : $theme-grey-F5F5F5,
   secondary-150 : $theme-grey-e5e5e5,
   secondary-170 : $theme-grey-C4CBDA,
+  secondary-180 : $theme-grey-B6B5B5,
   secondary-200 : $theme-grey-8A9299,
   secondary-290 : $theme-grey-484848,
   secondary-300 : $theme-grey-45494D,
@@ -667,6 +670,7 @@ $sparrow-border-colors: (
   secondary-110 : $theme-grey-F5F5F5,
   secondary-150 : $theme-grey-e5e5e5,
   secondary-170 : $theme-grey-C4CBDA,
+  secondary-180 : $theme-grey-B6B5B5,
   secondary-200 : $theme-grey-8A9299,
   secondary-290 : $theme-grey-484848,
   secondary-300 : $theme-grey-45494D,
