feat: add multiple tab loader [#1243]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -158,6 +158,7 @@ $theme-red-fe2e2e: #fe2e2e;
 $theme-red-6f2828: #6f2828;
 $theme-red-312325: #312325;
 $theme-red-230408: #230408;
+$theme-red-2B1C1D: #2B1C1D;
 
 
 
@@ -300,6 +301,7 @@ $theme-red-230408: #230408;
   --text-danger-850 : #{$theme-red-6f2828};
   --text-danger-900 : #{$theme-red-fe2e2e};
   --text-danger-1000 : #{$theme-red-312325};
+  --text-danger-1200 : #{$theme-red-2B1C1D};
 
   //
   //
@@ -361,6 +363,7 @@ $theme-red-230408: #230408;
   --bg-danger-900 : #{$theme-red-fe2e2e};
   --bg-danger-1000 : #{$theme-red-312325};
   --bg-danger-1100 : #{$theme-red-230408};
+  --bg-danger-1200 : #{$theme-red-2B1C1D};
 
 
   //
@@ -411,6 +414,7 @@ $theme-red-230408: #230408;
   --border-danger-800 : #{$theme-red-f33346};
   --border-danger-900 : #{$theme-red-fe2e2e};
   --border-danger-1000 : #{$theme-red-312325};
+  --border-danger-1200 : #{$theme-red-2B1C1D};
   
   //
   //
