fix: save button of api request
- guest cannot save reqest now
- disable save icon color updated

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -480,6 +480,8 @@ $theme-red-2B1C1D: #2B1C1D;
   --icon-danger-800 : #{$theme-red-f33346};
   --icon-danger-900 : #{$theme-red-fe2e2e};
   --icon-danger-1000 : #{$theme-red-312325};
+
+  --icon-disabled-100 : #{$theme-grey-333333};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
