fix: improve styling of AI suggestion button for better box-shadow

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -145,6 +145,7 @@ $theme-blue-303F4F: #303F4F;
 $theme-blue-1D3650: #1D3650;
 $theme-blue-74AEF6: #74AEF6;
 $theme-blue-11253a: #11253a;
+$theme-blue-1E2A47: #1E2A47;
 
 $theme-violet-676A80: #676A80;
 $theme-violet-37394E: #37394E;
@@ -327,6 +328,7 @@ $theme-red-2B1C1D: #2B1C1D;
   --bg-primary-500 : #{$theme-blue-2B5ED4};
   --bg-primary-600 : #{$theme-blue-1D3650};
   --bg-primary-700 : #{$theme-blue-11253a};
+  --bg-primary-800 : #{$theme-blue-1E2A47};
 
   --bg-secondary-100 : #{$theme-grey-ffffff};
   --bg-secondary-110 : #{$theme-grey-F5F5F5};
