fix: Fixed Ui issues from loop doc [#1392]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -449,9 +449,11 @@ $theme-red-2B1C1D: #2B1C1D;
   --icon-secondary-220 : #{$theme-grey-60616B};
   --icon-secondary-290 : #{$theme-grey-484848};
   --icon-secondary-300 : #{$theme-grey-45494D};
+  --icon-secondary-380 : #{$theme-grey-333333};
   --icon-secondary-400 : #{$theme-grey-313233};
   --icon-secondary-450 : #{$theme-grey-191919};
   --icon-secondary-500 : #{$theme-grey-272727};
+  --icon-secondary-550 : #{$theme-grey-1A1A1A};
   --icon-secondary-600 : #{$theme-grey-212222};
   --icon-secondary-700 : #{$theme-grey-161617};
   --icon-secondary-800 : #{$theme-grey-151515};
