fix: add missing comma in style.scss

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -559,8 +559,10 @@ $sparrow-font-sizes: (
   // 19px in rem
   20: 1.25rem,
   // 20px in rem
-  28: 1.75rem // 28px in rem
-  36: 2.25rem // 36px in rem,
+  28: 1.75rem,
+  // 28px in rem
+  36: 2.25rem,
+  // 36px in rem,
 );
 
 // Define a map for border radius in pixels
