feat: create run history block [#1401]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -118,6 +118,7 @@ $theme-grey-272727: #272727;
 $theme-grey-212222: #212222;
 $theme-grey-1A1A1A: #1a1a1a;
 $theme-grey-161617: #161617;
+$theme-grey-1E1E1E: #1E1E1E;
 $theme-grey-151515: #151515;
 $theme-grey-000000: #000000;
 $theme-grey-191919: #191919;
@@ -346,6 +347,7 @@ $theme-green-8dc599: #8dc599;
   --bg-secondary-850: #{$theme-grey-121212};
   --bg-secondary-900: #{$theme-grey-000000};
   --bg-secondary-950: #{$theme-grey-808080};
+  --bg-secondary-970: #{$theme-grey-1E1E1E};
   --bg-secondary-1000: #{$theme-grey-CCCCCC};
   --bg-secondary-1100: #{$theme-grey-2B343D};
 
