--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -138,6 +138,7 @@ $theme-blue-2B5ED4: #2b5ed4;
 $theme-blue-DF77F9: #df77f9;
 $theme-blue-303F4F: #303f4f;
 $theme-blue-1D3650: #1d3650;
+$theme-blue-1E263B: #1e263b;
 $theme-blue-74AEF6: #74aef6;
 $theme-blue-11253a: #11253a;
 $theme-blue-1E2A47: #1e2a47;
@@ -326,6 +327,7 @@ $theme-green-00A86B: #00a86b;
   --bg-primary-400: #{$theme-blue-0B5ED7};
   --bg-primary-500: #{$theme-blue-2B5ED4};
   --bg-primary-600: #{$theme-blue-1D3650};
+  --bg-primary-650: #{$theme-blue-1E263B};
   --bg-primary-700: #{$theme-blue-11253a};
   --bg-primary-800: #{$theme-blue-1E2A47};
 
