--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -150,8 +150,10 @@ $theme-violet-22232E: #22232e;
 $theme-violet-272831: #272831;
 $theme-violet-2E2F3D: #2e2f3d;
 $theme-violet-323548: #323548;
+$theme-violet-262834: #262834;
 $theme-violet-1c1d27: #1c1d27;
 $theme-violet-1C1D2B: #1c1d2b;
+
 
 $theme-red-e5acb2: #e5acb2;
 $theme-red-fe8c98: #fe8c98;
@@ -535,6 +537,8 @@ $theme-colors: map-merge($theme-colors,
 
 // Define a map for font sizes in pixels
 $sparrow-font-sizes: (
+  6: 0.4rem,
+  // 6px in rem
   8: 0.5rem,
   // 8px in rem
   9: 0.5625rem,
@@ -660,6 +664,7 @@ $sparrow-bg-colors: (
   tertiary-500: $theme-violet-272831,
   tertiary-600: $theme-violet-2E2F3D,
   tertiary-650: $theme-violet-323548,
+  tertiary-670: $theme-violet-262834,
   tertiary-700: $theme-violet-1c1d27,
   tertiary-750: $theme-violet-1C1D2B,
 
@@ -729,6 +734,9 @@ $sparrow-border-colors: (
 
   .text-fs-#{$size} {
     font-size: $value;
+  }
+  .text-fs-#{$size}-important {
+    font-size: $value !important;
   }
 }
 
