fix: fixed ui issues [#1576]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -354,6 +354,7 @@ $theme-green-00A86B: #00a86b;
   --bg-secondary-750: #{$theme-grey-4D4D4D};
   --bg-secondary-800: #{$theme-grey-151515};
   --bg-secondary-850: #{$theme-grey-121212};
+  --bg-secondary-870: #{$theme-grey-1D1D20};
   --bg-secondary-900: #{$theme-grey-000000};
   --bg-secondary-950: #{$theme-grey-808080};
   --bg-secondary-1000: #{$theme-grey-CCCCCC};
@@ -398,7 +399,9 @@ $theme-green-00A86B: #00a86b;
   --border-secondary-150: #{$theme-grey-e5e5e5};
   --border-secondary-200: #{$theme-grey-8A9299};
   --border-secondary-290: #{$theme-grey-484848};
-  --border-secondary-300: #{$theme-grey-45494D};
+  --border-secondary-295: #{$theme-grey-4e4e4e};
+  --border-secondary-300: #{$theme-grey-636566};
+  --border-secondary-310: #{$theme-grey-636566};
   --border-secondary-320: #{$theme-grey-353646};
   --border-secondary-400: #{$theme-grey-313233};
   --border-secondary-450: #{$theme-grey-191919};
