--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -368,6 +368,7 @@ $theme-green-00A86B: #00a86b;
   --bg-tertiary-500: #{$theme-violet-272831};
   --bg-tertiary-600: #{$theme-violet-2E2F3D};
   --bg-tertiary-650: #{$theme-violet-323548};
+  --bg-tertiary-670: #{$theme-violet-262834};
   --bg-tertiary-700: #{$theme-violet-1c1d27};
   --bg-tertiary-750: #{$theme-violet-1C1D2B};
 
@@ -395,6 +396,7 @@ $theme-green-00A86B: #00a86b;
   --border-primary-400: #{$theme-blue-0B5ED7};
   --border-primary-900: #{$theme-blue-303F4F};
 
+  --border-secondary-50: #{$theme-grey-999999};
   --border-secondary-100: #{$theme-grey-ffffff};
   --border-secondary-110: #{$theme-grey-F5F5F5};
   --border-secondary-150: #{$theme-grey-e5e5e5};
