fix: fixed importing of color [#1501]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -94,6 +94,7 @@ $theme-grey-ffffff: #ffffff;
 $theme-grey-F5F5F5: #f5f5f5;
 $theme-grey-e5e5e5: #e5e5e5;
 $theme-grey-C4CBDA: #c4cbda;
+$theme-grey-d7d7d7: #d7d7d7;
 $theme-grey-A5B5CA: #a5b5ca;
 $theme-grey-B6B5B5: #b6b5b5;
 $theme-grey-8A9299: #8a9299;
@@ -277,6 +278,7 @@ $theme-green-00A86B: #00a86b;
   --text-secondary-150: #{$theme-grey-e5e5e5};
   --text-secondary-200: #{$theme-grey-8A9299};
   --text-secondary-250: #{$theme-grey-83899F};
+  --text-secondary-270: #{$theme-grey-d7d7d7};
   --text-secondary-290: #{$theme-grey-484848};
   --text-secondary-300: #{$theme-grey-45494D};
   --text-secondary-350: #{$theme-grey-636566};
