fix: Resolved comment [#1686]

--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -158,6 +158,8 @@ $theme-violet-262834: #262834;
 $theme-violet-1c1d27: #1c1d27;
 $theme-violet-1C1D2B: #1c1d2b;
 $theme-violet-363849: #363849;
+$theme-violet-2e2f3db2: #2e2f3db2;
+
 
 
 
@@ -382,6 +384,7 @@ $theme-green-00A86B: #00a86b;
   --bg-tertiary-700: #{$theme-violet-1c1d27};
   --bg-tertiary-750: #{$theme-violet-1C1D2B};
   --bg-tertiary-800: #{$theme-violet-363849};
+  --bg-tertiary-850: #{$theme-violet-2e2f3db2}
 
   --bg-danger-100: #{$theme-red-e5acb2};
   --bg-danger-200: #{$theme-red-fe8c98};
