feat: add graphql initator to utilize services [#1985]

--- a/apps/@sparrow-desktop/src/styles/style.scss
+++ b/apps/@sparrow-desktop/src/styles/style.scss
@@ -172,6 +172,7 @@ $theme-red-f34b5c: #f34b5c;
 $theme-red-f33346: #f33346;
 $theme-red-fe2e2e: #fe2e2e;
 $theme-red-6f2828: #6f2828;
+$theme-red-F15EB0: #f15eb0;
 $theme-red-312325: #312325;
 $theme-red-230408: #230408;
 $theme-red-2B1C1D: #2b1c1d;
@@ -508,6 +509,7 @@ $theme-green-00A86B: #00a86b;
   --icon-danger-800: #{$theme-red-f33346};
   --icon-danger-900: #{$theme-red-fe2e2e};
   --icon-danger-1000: #{$theme-red-312325};
+  --icon-danger-1100: #{$theme-red-F15EB0};
 
   --icon-success-100: #{$theme-green-8dc599};
 }
